package com.sda.patterns.structural.adapter.challenge.advanced;

public interface AdvancedMediaPlayer {

	void loadFilename(String filename);

	void listen();
}
