package com.sda.patterns.structural.adapter.challenge.basic;

public interface MediaPlayer {

	void play(String audioType, String filename);
}
